fix text wrapping of file names and remove scrolls

--- a/star/public/css/noobaa_style.css
+++ b/star/public/css/noobaa_style.css
@@ -368,6 +368,11 @@ a.btn-link, button.btn-link {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
+.text-wrap {
+	overflow: hidden;
+	word-break: break-all;
+	word-wrap: break-word;
+}
 .filling {
 	width: 100%;
 	height: 100%;
